# billion-dollars-happiness

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  example.py  pyproject.toml
.github/workflows/: build.yml  linters.yml
app/: helpers.py  net.py
app/core/: architecture.py  settings.py
app/model/: anchor_no_pattern.pt  anchor_pattern.pt  model.pt  scaler.save
client/: main.py
inputs/: GC_30min.csv  SBER_1day.csv
server/: api.py  schemas.py
