[tool.poetry]
name = "billion-dollars-happiness"
version = "0.1.0"
description = ""
authors = ["limness <andrey.pwn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
#torch = "^2.0.1"
pandas = "^2.1.0"
#torchmetrics = "^1.1.2"
#matplotlib = "^3.7.3"
#tqdm = "^4.66.1"
#sklearn = "^0.0.post9"
pydantic = "^2.3.0"
pre-commit = "^3.4.0"
scikit-learn = "^1.3.0"
pydantic-settings = "^2.0.3"
#plotly = "^5.17.0"
fastapi = "^0.103.2"
#logger = "^1.4"
uvicorn = "^0.23.2"
loguru = "^0.7.2"

[tool.ruff]
exclude = [".git", "__pycache__", ".idea",".venv"]
line-length = 120

[tool.isort]
multi_line_output = "3"
length_sort = true
reverse_sort = "1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
